--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,6 +27,16 @@ jobs:
         run: |
           echo "n8n_version=$(curl --silent --header 'Accept: application/vnd.github.v3+json' --url 'https://api.github.com/repos/n8n-io/n8n/releases/latest' | jq --raw-output '.name | sub("n8n@"; "")')" >> $GITHUB_ENV
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: linux/amd64,linux/arm64
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          platforms: linux/amd64,linux/arm64
+
       - name: Login to the Container registry
         uses: docker/login-action@v2
         with:
@@ -38,6 +48,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           build-args: |
             VERSION=${{ env.n8n_version }}
