ci: add version check

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,15 +6,44 @@ on:
   push:
     branches: [main]
   workflow_dispatch:
+    inputs:
+      force_publish:
+        description: 'Publish even if the versions are equal'
+        required: false
+        type: boolean
 
 env:
   registry: ghcr.io
   image_name: ${{ github.repository_owner }}/n8n-python
 
 jobs:
+  check:
+    name: Check
+    runs-on: ubuntu-latest
+    outputs:
+      changed: ${{ steps.check.outputs.changed }}
+    permissions:
+      packages: read
+
+    steps:
+      - name: Compare n8n versions
+        id: check
+        run: |
+          n8n_version=$(curl --silent --header 'Accept: application/vnd.github.v3+json' --url 'https://api.github.com/repos/n8n-io/n8n/releases/latest' | jq --raw-output '.name | sub("n8n@"; "")')
+
+          docker pull ${{ env.registry }}/${{ env.image_name }}:latest
+          n8n_python_version=$(docker image inspect --format '{{json .}}' ${{ env.registry }}/${{ env.image_name }}:latest | jq --raw-output '.Config.Labels."org.opencontainers.image.version"')
+
+          echo "n8n: $n8n_version" ; echo "n8n-python: $n8n_python_version"
+          if [ "$n8n_version" != "$n8n_python_version" ]; then
+              echo "changed=1" >> $GITHUB_OUTPUT
+          fi
+
   publish:
     name: Publish
     runs-on: ubuntu-latest
+    needs: check
+    if: ${{ inputs.force_publish || needs.check.outputs.changed }}
     permissions:
       contents: read
       packages: write
@@ -26,6 +55,18 @@ jobs:
       - name: Get latest version
         run: |
           echo "n8n_version=$(curl --silent --header 'Accept: application/vnd.github.v3+json' --url 'https://api.github.com/repos/n8n-io/n8n/releases/latest' | jq --raw-output '.name | sub("n8n@"; "")')" >> $GITHUB_ENV
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.registry }}/${{ env.image_name }}
+          tags: |
+            type=raw,value=latest
+            type=raw,value=${{ env.n8n_version }}
+          labels: |
+            org.opencontainers.image.title=n8n-python
+            org.opencontainers.image.version=${{ env.n8n_version }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -52,6 +93,5 @@ jobs:
           push: true
           build-args: |
             VERSION=${{ env.n8n_version }}
-          tags: |
-            ${{ env.registry }}/${{ env.image_name }}:latest
-            ${{ env.registry }}/${{ env.image_name }}:${{ env.n8n_version }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
