--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,8 +9,9 @@ on:
     inputs:
       force_publish:
         description: 'Publish even if the versions are equal'
-        required: false
         type: boolean
+        required: false
+        default: false
 
 env:
   registry: ghcr.io
@@ -36,14 +37,15 @@ jobs:
 
           echo "n8n: $n8n_version" ; echo "n8n-python: $n8n_python_version"
           if [ "$n8n_version" != "$n8n_python_version" ]; then
-              echo "changed=1" >> $GITHUB_OUTPUT
+            echo "changed=true" >> $GITHUB_OUTPUT
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
           fi
 
   publish:
     name: Publish
     runs-on: ubuntu-latest
     needs: check
-    if: ${{ inputs.force_publish || needs.check.outputs.changed }}
     permissions:
       contents: read
       packages: write
@@ -90,7 +92,7 @@ jobs:
         with:
           context: .
           platforms: linux/amd64,linux/arm64
-          push: true
+          push: ${{ inputs.force_publish || needs.check.outputs.changed }}
           build-args: |
             VERSION=${{ env.n8n_version }}
           tags: ${{ steps.meta.outputs.tags }}
