ci: switch to npm for fetching latest n8n version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Compare n8n versions
         id: check
         run: |
-          n8n_version=$(curl --silent --header 'Accept: application/vnd.github.v3+json' --url 'https://api.github.com/repos/n8n-io/n8n/releases/latest' | jq --raw-output '.name | sub("n8n@"; "")')
+          n8n_version=$(curl --no-progress-meter 'https://registry.npmjs.org/n8n/latest' | jq --raw-output '.version')
 
           docker pull ${{ env.registry }}/${{ env.image_name }}:latest
           n8n_python_version=$(docker image inspect --format '{{json .}}' ${{ env.registry }}/${{ env.image_name }}:latest | jq --raw-output '.Config.Labels."org.opencontainers.image.version"')
@@ -56,7 +56,7 @@ jobs:
 
       - name: Get latest version
         run: |
-          echo "n8n_version=$(curl --silent --header 'Accept: application/vnd.github.v3+json' --url 'https://api.github.com/repos/n8n-io/n8n/releases/latest' | jq --raw-output '.name | sub("n8n@"; "")')" >> $GITHUB_ENV
+          echo "n8n_version=$(curl --no-progress-meter 'https://registry.npmjs.org/n8n/latest' | jq --raw-output '.version')" >> $GITHUB_ENV
 
       - name: Docker meta
         id: meta
